equals也可以解决