@@ -11,6 +11,8 @@ public class Main {
     // 判断两个字符串是否包含相等的数字
     // 例如a为"+1234"，b为"1234"，返回true
     public static boolean numberEquals(String a, String b) {
-        return Integer.valueOf(a) == Integer.valueOf(b);
+        int c = new Integer(a);
+        int d = new Integer(b);
+        return c == d;
     }
 }
